build: criando fixtures e automatizando a sua utilização no docker

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,7 @@ services:
     build: .
     restart: always
     command: bash -c "python manage.py migrate &&
+                      python manage.py loaddata initial.json &&
                       python manage.py runserver 0.0.0.0:8000" 
     volumes:
       - .:/code
