--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.4.1
 attrs==21.4.0
 backports.zoneinfo==0.2.1
 Django==4.0
+django-cors-headers==3.12.0
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.1.0
 iniconfig==1.1.1
